--- a/views/login.ejs
+++ b/views/login.ejs
@@ -27,6 +27,7 @@
           />
         </div>
         <button type="submit" class="btn btn-primary btn-block">Login</button>
+        <a href="/auth/github">login with github</a>
       </form>
       <p class="mt-4">New User? <a href="/auth/register">Register</a></p>
       <p>Forgot Password? <a href="/auth/forgot">Reset</a></p>
